# PolyFit

./: .gitignore  CMakeLists.txt
code/3rd_QGLViewer/QGLViewer/: config.h
code/3rd_glew/include/GL/: glew.h
code/cmake/: FindGUROBI.cmake
code/renderer/: opengl_info.cpp  surface_render.cpp
